--- a/Blog/style.css
+++ b/Blog/style.css
@@ -1,40 +1,48 @@
-
 body {
-	font-family: "Lucida Sands Unicode", "Lucida Grande", sans-serif;
-	border; 4px double #696969;
-	background-color: #CCFFFF;
+	font-family: Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
+	background-color: #7FFFD4;
 }
 
-.firstdiv {
+nav {
+	text-align: center;
+    line-height:175%;
+    background-color:#eeeeee;
+    height:20%;
+    width:30%;
+    float:left;
+    padding:5px;
+    border: 2px solid;
+    border-radius: 25px;
+}
+
+.pageheader{
+	background-color:black;
+    color:white;
+    text-align:center;
+    line-height:100%;
+    padding: 5px;
+}
+
+.blog {
+	width:60%;
+    float:right;
+    padding:10px;
+    line-height: 100%
+}
+
+.blogtext {
 	background-color: #696969;
 	color: #4B0082;
-	width: #40%;}
-
-.seconddiv {
-	color: #660066 ;
-	font-family: "Times New Roman";
+    padding:10px;
 }
 
-h2 {color: #FF3399;
-	font-family: "Times New Roman";}
-h3 {color: #FF6633;
-	font-family: "Arial";}
-h1 {text-align: center;
-	font-family: "Times New Roman";
-	color: #980000; }
-h4 {font-family: "Courier New";
-	color: #66CC33}
+.blogheader {
+	color: #483D8B;
+}
 
-.firstsection {
-	text-align: center;
-	color: #CC0033;
-	background-color: #660099;
-	font-family: cursive;
-	border: 2px solid red;
-	width: 33%;
-	}
-
-.secondsection {
-	text-align: right;
-	background-color: #696969;
-	}
+.footer {
+	background-color:black;
+    color:white;
+    clear:both;
+    text-align:center;
+   	padding:5px;}
