--- a/Blog/style.css
+++ b/Blog/style.css
@@ -8,7 +8,7 @@ body {
 .navtest {
 	text-align: center;
     line-height:175%;
-    background-color:#eeeeee;
+    background-color:#F8F8FF;
     height:20%;
     width:100%;
     float: center;
