--- a/Blog/style.css
+++ b/Blog/style.css
@@ -44,13 +44,14 @@ nav {
     text-align:center;
     line-height:100%;
     padding: 5px;
+    border-radius: 10px;
 }
 
 .blog {
 	width:60%;
     float:right;
     padding:10px;
-    line-height: 100%
+    line-height: 100%;
 }
 
 .blogtext {
@@ -61,6 +62,10 @@ nav {
 
 .blogheader {
 	color: #483D8B;
+	background-color: #FAF0E6;
+	padding: 5px;
+    border-radius: 10px;
+    width: 20%;
 }
 
 .footer {
