--- a/Blog/style.css
+++ b/Blog/style.css
@@ -55,13 +55,13 @@ nav {
 }
 
 .blogtext {
-	background-color: #696969;
-	color: #4B0082;
+	background-color: #FDF5E6;
+	color: #778899;
     padding:10px;
 }
 
 .blogheader {
-	color: #483D8B;
+	color: #F08080;
 	background-color: #FAF0E6;
 	padding: 5px;
     border-radius: 10px;
