--- a/Blog/style.css
+++ b/Blog/style.css
@@ -18,12 +18,12 @@ body {
 }
 
 .anav {
-	color: #800000;
+	color: #483D8B;
 	text-decoration: none;
 }
 
 a:hover {
-	color:#BA55D3;
+	color:#8B008B;
 }
 
 nav {
