--- a/Blog/style.css
+++ b/Blog/style.css
@@ -1,7 +1,6 @@
 body {
 	font-family: "Goudy Old Style", Garamond, "Big Caslon", "Times New Roman", serif;
 	background: url(Images/lace.jpg);
-    background-size: 100% 100%;
     background-repeat: repeat;
 }
 
@@ -33,6 +32,7 @@ nav {
     height:20%;
     width:30%;
     float:left;
+    clear: right;
     padding:5px;
     border: 2px solid;
     border-radius: 25px;
