--- a/Blog/style.css
+++ b/Blog/style.css
@@ -39,13 +39,15 @@ nav {
 }
 
 .pageheader{
-	background-color:#A9A9A9;
+	background-color:#909090 ;
     color:white;
-    text-align:center;
+    text-align:left;
     line-height:100%;
+    text-indent: 3%;
     padding: 5px;
     border-radius: 3px;
 }
+
 
 .blog {
 	width:60%;
