--- a/blogtest/style.css
+++ b/blogtest/style.css
@@ -1,6 +1,6 @@
 body {
 	font-family: "Goudy Old Style", Garamond, "Big Caslon", "Times New Roman", serif;
-	background: url(Images/lace.jpg);
+	background: ghostwhite;
     background-repeat: repeat;
 }
 
