--- a/blogtest/style.css
+++ b/blogtest/style.css
@@ -1,78 +1,39 @@
 body {
 	font-family: "Goudy Old Style", Garamond, "Big Caslon", "Times New Roman", serif;
 	background: ghostwhite;
-    background-repeat: repeat;
+}
+
+.pageheader{
+	border-bottom: 2px solid #909090 ;
+    color:#606060 ;
+    text-align:left;
+    line-height:100%;
+    text-indent: 3%;
 }
 
 .navtest {
-	text-align: center;
-    line-height:175%;
+    text-align: center;
+    line-height:100%;
     background-color:#F8F8FF;
     height:20%;
     width:100%;
     float: center;
     padding:5px;
-    border: 2px solid;
-    border-radius: 25px;
+    border-bottom: 2px solid #909090 ;
 }
 
 .anav {
-	color: #483D8B;
-	text-decoration: none;
+    color: #483D8B;
+    text-decoration: none;
 }
 
 a:hover {
-	color:#8B008B;
-}
-
-nav {
-	text-align: center;
-    line-height:175%;
-    background-color:#eeeeee;
-    height:20%;
-    width:30%;
-    float:left;
-    clear: left;
-    padding:5px;
-    border: 1px solid;
-    border-radius: 10px;
-}
-
-.pageheader{
-	background-color:#909090 ;
-    color:white;
-    text-align:left;
-    line-height:100%;
-    text-indent: 3%;
-    padding: 5px;
-    border-radius: 3px;
-}
-
-
-.blog {
-	width:60%;
-    float:right;
-    line-height: 100%;
-}
-
-.blogtext {
-	background-color: #FDF5E6;
-	color: #778899;
-	padding: 1px;
-}
-
-.blogheader {
-	color: #F08080;
-	background-color: #FAF0E6;
-	padding: 5px;
-    border-radius: 10px;
-    width: 20%;
-    font-size: 150%;
+    color:#8B008B;
 }
 
 .footer {
-	background-color:#E6E6FA;
-    color:#778899;
+	background-color: #585858;
+    color:white;
     clear:both;
     text-align:center;
    	padding:3px;
