--- a/Blog/style.css
+++ b/Blog/style.css
@@ -6,11 +6,13 @@ body {
 }
 
 .pageheader{
-	border-bottom: 2px solid #383838  ;
+    
+    border-bottom: 1.5px solid #383838;
     color:#606060 ;
     text-align:left;
     line-height:100%;
     text-indent: 3%;
+    text-transform: capitalize;
 }
 
 .pageheader h1 {
@@ -18,7 +20,7 @@ body {
 }
 
 .navigation {
-    border-bottom: 2px solid #383838 ;
+    border-bottom: 1.5px solid #383838 ;
     background-color:ghostwhite;
 }
 
@@ -51,6 +53,17 @@ body {
     text-align: justify;
 }
 
+#photoleft {
+    float: left;
+    margin-right: 1em;
+    margin-bottom: 1em;
+}
+
+#photoright {
+    float: right;
+    margin-left: 1em;
+    margin-bottom: 1em;
+}
 
 
 .footer {
