--- a/Blog/style.css
+++ b/Blog/style.css
@@ -6,8 +6,6 @@ body {
 }
 
 .pageheader{
-    
-    border-bottom: 1.5px solid #383838;
     color:#606060 ;
     text-align:left;
     line-height:100%;
@@ -20,7 +18,8 @@ body {
 }
 
 .navigation {
-    border-bottom: 1.5px solid #383838 ;
+    border-bottom: 1.5px solid #383838;
+    border-top: 1.5px solid #383838;
     background-color:ghostwhite;
 }
 
