--- a/resume/style.css
+++ b/resume/style.css
@@ -1,9 +1,20 @@
 body {
-    font-family: "Goudy Old Style", Garamond, "Big Caslon", "Times New Roman", serif;
+    font-family: 'Raleway', sans-serif;
     background: white;
     margin: 0;
     color: black;
 }
+
+
+img {
+    opacity: 1.0;
+    width: 100%;
+    z-index: 1;
+    display: block;
+margin-top: none;
+}
+
+
 
 
 img {
