--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-
+body{
+    font-family: 'Raleway', sans-serif;
+}
 
 img {
     opacity: 1.0;
@@ -7,3 +9,4 @@ img {
     display: block;
 margin-top: none;
 }
+
