--- a/style.css
+++ b/style.css
@@ -2,11 +2,89 @@ body{
     font-family: 'Raleway', sans-serif;
 }
 
-img {
-    opacity: 1.0;
-    width: 100%;
-    z-index: 1;
-    display: block;
-margin-top: none;
+nav {
+    height: 60px;
 }
 
+.navbar-header{
+    display: inline-block;
+}
+
+.nav{ 
+    display: inline-block;
+    float:right;
+}
+
+.nav .dropdown-toggle{
+    padding:0;
+}
+
+.nav li{
+    display:inline-block;
+    vertical-align: top;
+}
+
+.dropdown-menu{
+    right:0;
+    width:100%;
+    padding-top:0;
+}
+
+.dropdown-menu li{
+    display:block;
+}
+
+.dropdown .navbar-toggle {
+    display: block;
+}
+
+.imagecontainer {
+    margin-top: 60px;
+    position: relative;
+    display: inline-block;
+    width: 100%;
+}
+
+.imagecontainer img{
+    opacity: 1.0;
+    width: 100%;
+
+    display: block;
+    margin-top: 0;
+
+}
+
+.imagecontainer span {
+    position: absolute;
+    bottom: 0; 
+    display: inline-block;
+}
+
+.imagecontainer span h1 {
+    background: rgba(255, 255, 255, .75);
+    padding: 6px;
+    text-align: right;
+    font-size: 2em;
+}
+
+.imagecontainer span h1:nth-child(1){
+    width: 10em;
+}
+.imagecontainer span h1:nth-child(2){
+    width: 12em;
+}
+
+.imagecontainer span h1:nth-child(3){
+    width: 14em;
+}
+
+@media (max-width: 480px){
+    .subtitle-hide {
+        display:none;
+    }
+
+    .imagecontainer span h1 {
+    padding: 6px 2px;
+    font-size: 1.5em;
+    }
+}
