--- a/style.css
+++ b/style.css
@@ -78,7 +78,13 @@ nav {
     width: 14em;
 }
 
-@media (max-width: 480px){
+@media (max-width: 750px){
+    .subtitle-hide {
+        font-size: .75em;
+    }
+}
+
+@media (max-width: 650px){
     .subtitle-hide {
         display:none;
     }
