--- a/style.css
+++ b/style.css
@@ -90,9 +90,9 @@ nav {
         display:none;
     }
 
-    .nav li{
+    /*.nav li{
     font-size: 1.25em;
-    }
+    }*/
 
     .imagecontainer span h1 {
     padding: 6px 4px;
