--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ nav {
 .nav li{
     display:inline-block;
     vertical-align: top;
-    /*font-size: 1.25em;*/
+    font-size: 1.25em;
 }
 
 .dropdown-menu{
@@ -87,16 +87,16 @@ nav {
     .subtitle-hide {
         font-size: .75em;
     }
+
+     .nav li{
+        font-size: 1em;
+    }
 }
 
 @media (max-width: 650px){
     .subtitle-hide {
         display:none;
     }
-
-   /* .nav li{
-        font-size: 1em;
-    }*/
 
     .imagecontainer span h1 {
     padding: 6px 4px;
