--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ nav {
     width: 14em;
 }
 
-@media (max-width: 800px){
+/*@media (max-width: 800px){
     .subtitle-hide {
         font-size: .75em;
     }
@@ -92,7 +92,7 @@ nav {
     font-size: 1em;
     }
 
-}
+}*/
 
 @media (max-width: 650px){
     .subtitle-hide {
