--- a/style.css
+++ b/style.css
@@ -1,106 +1,98 @@
 body{
-    font-family: 'Raleway', sans-serif;
+font-family: 'Raleway', sans-serif;
 }
-
+ 
 nav {
-    height: 60px;
+height: 60px;
 }
 
 .name {
     color: #000066;
 }
-
+ 
 .navbar-header{
-    display: inline-block;
+display: inline-block;
 }
-
-.nav{ 
-    display: inline-block;
-    float:right;
+ 
+.nav{
+display: inline-block;
+float:right;
 }
-
-.nav .dropdown-toggle{
-    padding:0;
-}
-
+ 
 .nav li{
-    display:inline-block;
-    vertical-align: top;
-    font-size: 1.5em;
-    }
-
+display:inline-block;
+vertical-align: top;
+font-size: 1.5em;
+}
+ 
+.subtitle-hide {
+display:none;
+}
+ 
 .dropdown-menu{
-    right:0;
-    width:100%;
-    padding-top:0;
+right:0;
+width:100%;
+padding-top:0;
 }
-
+ 
 .dropdown-menu li{
-    display:block;
+display:block;
 }
-
+ 
 .dropdown .navbar-toggle {
-    display: block;
+display: block !important;
 }
-
+ 
 .imagecontainer {
-    margin-top: 60px;
-    position: relative;
-    display: inline-block;
-    width: 100%;
+margin-top: 60px;
+position: relative;
+display: inline-block;
+width: 100%;
 }
-
+ 
 .imagecontainer img{
-    opacity: 1.0;
-    width: 100%;
-
-    display: block;
-    margin-top: 0;
-
+opacity: 1.0;
+width: 100%;
+display: block;
+margin-top: 0;
 }
-
+ 
 .imagecontainer span {
-    position: absolute;
-    bottom: 0; 
-    display: inline-block;
+position: absolute;
+bottom: 0;
+display: inline-block;
 }
-
+ 
 .imagecontainer span h1 {
-    background: rgba(255, 255, 255, .75);
-    padding: 6px;
-    text-align: right;
-    font-size: 2em;
+background: rgba(255, 255, 255, .75);
+padding: 6px 4px;
+text-align: right;
+font-size: 1.5em;
 }
-
 .imagecontainer span h1:nth-child(1){
-    width: 10em;
+width: 10em;
 }
 .imagecontainer span h1:nth-child(2){
-    width: 12em;
+width: 12em;
 }
-
 .imagecontainer span h1:nth-child(3){
-    width: 14em;
+width: 14em;
 }
-
-@media (max-width: 800px){
-    .subtitle-hide {
-        display: none;
-    }
-
-     /*.nav li {
-    font-size: 1em;
-    }
-*/
+ 
+@media (min-width: 650px){
+.subtitle-hide {
+display:inline-block;
+font-size: .75em;
 }
-
-@media (max-width: 650px){
-   /* .subtitle-hide {
-        display:none;
-    }*/
-
-    .imagecontainer span h1 {
-    padding: 6px 4px;
-    font-size: 1.5em;
-    }
+}
+ 
+@media (min-width: 768px){
+ 
+.nav .dropdown-toggle{
+padding:0;
+}
+.imagecontainer span h1 {
+padding: 6px;
+font-size: 2em;
+}
 }
