--- a/style.css
+++ b/style.css
@@ -94,6 +94,9 @@ padding:0;
 .imagecontainer span h1 {
 padding: 6px;
 font-size: 2em;
+}
+.subtitle-hide {
+display:inline-block;
 font-size: 1.25em;
 }
 }
