--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ width: 14em;
 @media (min-width: 650px){
 .subtitle-hide {
 display:inline-block;
-font-size: .75em;
+font-size: ..6em;
 }
 }
  
@@ -100,6 +100,6 @@ font-size: 2em;
 }
 .subtitle-hide {
 display:inline-block;
-font-size: 1.0em;
+font-size: .75em;
 }
 }
