--- a/Blog/style.css
+++ b/Blog/style.css
@@ -86,6 +86,7 @@ width: 14em;
 .blog {
 	margin-left: auto;
     margin-right: auto;
+    width: 80%;
 }
 
 
@@ -93,11 +94,10 @@ width: 14em;
 .subtitle-hide {
 display:inline-block;
 font-size: .75em;
-}
+	}
 .blog {
 	width: 80%;
-}
-
+	}
 }
  
 @media (min-width: 768px){
@@ -113,6 +113,6 @@ display:inline-block;
 font-size: 1em;
 }
 .blog {
-	width: 60%;
+	width: calc(100%*(2/3));
 }
 }
