--- a/Blog/style.css
+++ b/Blog/style.css
@@ -98,12 +98,25 @@ margin: 0;
 
 .blog h2 {
 	margin-bottom: 0px;
-	color: #242424;
+	color: #242424s;
 }
 
 .blog h3 {
 	margin-top: 1%;
 }
+
+.blogpiccontainer {
+	float: left;
+	width: 200px;
+    height: 200px;
+	margin-right: 3%;
+	margin-bottom: 3%;
+	overflow: hidden;
+}
+
+/*.blogpic{ 
+	overflow: hidden;
+}*/
 
 @media (min-width: 650px){
 .subtitle-hide {
