--- a/Blog/style.css
+++ b/Blog/style.css
@@ -128,6 +128,13 @@ font-size: .75em;
 	margin-bottom: 3%;
 }	
 }
+
+@media (min-width: 420px){
+.blogpiccontainer {
+	float: left;
+	margin: 3%;
+}
+}
  
 @media (min-width: 768px){
 .nav .dropdown-toggle{
