--- a/About/style.css
+++ b/About/style.css
@@ -1,62 +1,149 @@
-body {
-	font-family: "Goudy Old Style", Garamond, "Big Caslon", "Times New Roman", serif;
-	background: white;
-    margin: 0;
-    padding: 0;
+body{
+font-family: 'Raleway', sans-serif;
+}
+ 
+nav {
+height: 60px;
 }
 
-.pageheader{
-    color:#606060 ;
-    text-align:left;
-    line-height:100%;
-    text-indent: 3%;
-    text-transform: capitalize;
+.name {
+    color: #242424;
+}
+ 
+.navbar-header{
+display: inline-block;
+}
+ 
+.nav{
+display: inline-block;
+float:right;
+}
+ 
+.nav li{
+display:inline-block;
+vertical-align: top;
+font-size: 1.5em;
 }
 
-.pageheader h1 {
-    color: black;
+.nav li a{
+color: #2f4f4f;
+}
+ 
+.subtitle-hide {
+display:none;
+}
+ 
+.dropdown-menu{
+right:0;
+width:100%;
+padding-top:0;
+}
+ 
+.dropdown-menu li{
+display:block;
+}
+ 
+.navbar-toggle {
+display: block !important;
 }
 
-.navigation {
-    border-bottom: 1.5px solid #383838;
-    border-top: 1.5px solid #383838;
-    background-color:ghostwhite;
+.imagecontainer {
+margin-top: 60px;
+position: relative;
+display: inline-block;
+width: 100%;
+}
+ 
+.imagecontainer img{
+opacity: 1.0;
+width: 100%;
+display: block;
+margin-top: 0;
+}
+ 
+.imagecontainer span {
+position: absolute;
+bottom: 0;
+display: inline-block;
+}
+ 
+.imagecontainer span h1 {
+background: rgba(255, 255, 255, .6);
+padding: 6px 4px;
+text-align: right;
+font-size: 1.5em;
+}
+.imagecontainer span h1:nth-child(1){
+width: 10em;
+}
+.imagecontainer span h1:nth-child(2){
+width: 12em;
+}
+.imagecontainer span h1:nth-child(3){
+width: 14em;
 }
 
-.navigation ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 2px;
-    text-align: center;
+.blogcontainer {
+    margin-left: auto;
+    margin-right: auto; 
+    padding-bottom: 5%;
+    width: 80%;
 }
 
-.navigation ul li{
-    display: inline-block;
-    width: 10em;
+.blog{
+width: 100%;
+display: block;
+margin: 0;
 }
 
-.navigation ul li a {
-    text-decoration: none;
+.blog h2 {
+    margin-bottom: 0px;
+    color: #242424s;
 }
 
-.navigation ul li a:hover {
-    color:#8B008B;
+.blog h3 {
+    margin-top: 1%;
 }
 
-.blog {
+.blogpiccontainer {
     margin-left: auto;
     margin-right: auto;
-    width: 70%;
-    background-color: white;
-    padding: 3em;
-    text-align: justify;
+    width: 250px;
+    height: 200px;
+    margin-bottom: 2%;
+    overflow: hidden;
 }
 
+@media (min-width: 420px){
+.blogpiccontainer {
+    float: left;
+    margin-right: 2%;
+}
+}
 
-.footer {
-	background-color: #383838;
-    color:white;
-    clear:both;
-    text-align:center;
-   	padding:3px;
+@media (min-width: 650px){
+.subtitle-hide {
+display:inline-block;
+font-size: .75em;
+    }
+.blogcontainer {
+    width: 80%;
+    }
+}
+ 
+@media (min-width: 768px){
+.nav .dropdown-toggle{
+padding:0;
+}
+.imagecontainer span h1 {
+padding: 6px;
+font-size: 2em;
+}
+.subtitle-hide {
+display:inline-block;
+font-size: 1em;
+}
+.blogcontainer {
+    width: calc(100%*(2/3));
+}
 }
